<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="50dp"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText android:id="@+id/edit_message"
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/searchBar" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage" />

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/enter_a_symbol"
        android:textSize="35sp"
        android:gravity="center"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="63dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
